a few funding-related updates and some cosmetics

--- a/funding.tex
+++ b/funding.tex
@@ -2,9 +2,11 @@
 
 \subsection{Research Awards/Grants}
 
-\cvline{NSF OAC-2107020}{PI, Collaborative Research: OAC Core: Advancing Low-Power Computer Vision at the Edge, \$250,000, 2021-2024}
+\cvline{NSA NCAE-C H98230-22-1-0306}{co-PI, Taming Container Privileges using Userland OS Guests, \$500,000, 2022-2024}
 
-\cvline{NSF OAC-2104319}{PI, CDSE: Collaborative: Cyber Infrastructure to Enable Computer Vision Applications at the Edge Using Automated Contextual Analysis, \$174,749, 2021-2024}
+\cvline{NSF OAC-2107020}{PI, Collaborative Research: OAC Core: Advancing Low-Power Computer Vision at the Edge, \$258,000, 2021-2024}
+
+\cvline{NSF OAC-2104319}{PI, CDSE: Collaborative: Cyber Infrastructure to Enable Computer Vision Applications at the Edge Using Automated Contextual Analysis, \$209,624, 2021-2024}
 
 \cvline{NSF HRD-2121654}{Senior Personnel, ADVANCE Adaptation: INSPIRED-Inclusive Practices in the Retention and Equity of Diverse Faculty, \$972,496, 2021-2024}
 
