--- a/heading.tex
+++ b/heading.tex
@@ -53,5 +53,5 @@
 \phone[office]{+1.773.508.8931}                    % optional, remove / comment the line if not wanted
 %\phone[fax]{+3~(456)~789~012}                      % optional, remove / comment the line if not wanted
 \email{gkt@cs.luc.edu}                               % optional, remove / comment the line if not wanted
-\homepage{gkt.cs.luc.edu}
+\homepage{gkt.sh}
 
