--- a/appointments.tex
+++ b/appointments.tex
@@ -2,7 +2,7 @@
 
 \vspace{6pt}
 
-\cventry{2022--Present}{Computer Science Department Chairperson}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
+\cventry{2022--Present}{Department Chairperson for Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
 
 \cventry{2011--Present}{Full Professor of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
 
@@ -10,13 +10,11 @@
 
 \cventry{2010--2015}{Co-Founder and Director, Center for Textual Studies and Digital Humanities}{Loyola University Chicago }{Chicago, IL}{}{\vspace{3pt}}
 
-\cventry{2012--2014}{Visiting Scholar, Electrical Engineering and Computer Science}{Northwestern University}{Argonne, IL}{}{\vspace{3pt}}
+\cventry{2012--2014,1999--2008}{Visiting Scholar, Electrical Engineering and Computer Science}{Northwestern University}{Evanston, IL}{}{\vspace{3pt}}
 
 \cventry{2014--2010}{Associate Professor of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
 
 \cventry{2001--2004}{Visiting Associate Professor of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
-
-\cventry{1999--2008}{Visiting Scholar}{Northwestern University}{Evanston, IL}{}{\vspace{3pt}}
 
 \cventry{1999--2000}{Assistant Professor of Computer Science}{DePaul University}{Chicago, IL}{}{\vspace{3pt}}
 
