--- a/bibs/inproceedings/2022-popets-mute.bib
+++ b/bibs/inproceedings/2022-popets-mute.bib
@@ -1,8 +1,8 @@
 @inproceedings{arxiv.2204.06128,
 abbr = {Conference},
 selected = {true},
-  doi = {10.48550/ARXIV.2204.06128},
-  url = {https://arxiv.org/abs/2204.06128},
+  doi = {https://doi.org/10.56553/popets-2022-0077},
+  url = {https://ecommons.luc.edu/cs_facpubs/287/},
   author = {Yang, Yucheng and West, Jack and Thiruvathukal, George K. and Klingensmith, Neil and Fawaz, Kassem},
   title = {Are You Really Muted?: A Privacy Analysis of Mute Buttons in Video Conferencing Apps},
   booktitle = {Proceedings of 22nd Privacy Enhancing Technologies Symposium (PETS 2022)},
