--- a/appointments.tex
+++ b/appointments.tex
@@ -20,6 +20,8 @@
 
 \cventry{1998--1999}{Visiting Assistant Professor of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
 
+\cventry{1996--1998}{Postdoctoral Computer Scientist}{Argonne National Laboratory}{Argonne, IL}{}{\vspace{3pt}}
+
 \cventry{1996--1997}{Lecturer of Computer Science}{Illinois Institute of Technology}{Chicago, IL}{}{\vspace{3pt}}
 
 
