--- a/education.tex
+++ b/education.tex
@@ -1,12 +1,10 @@
 \section{Academic Preparation}
 
-\cventry{1996--1998}{Postdoctoral Computer Scientist}{Argonne National Laboratory}{Argonne, IL}{}{\vspace{3pt}}
-
 \cventry{1990-1995}{Ph.D.}{Illinois Insititute of Technology}{Chicago, IL}{Computer Science}{\vspace{3pt}\textbf{Doctoral Dissertation} \textit{Actors based computations on parallel computers.}}{\vspace{3pt}}
 
 \cventry{1988--1990}{M.S}{Illinois Institute of Technology}{Chicago, IL}{Computer Science}{\vspace{3pt}}
 
-\cventry{1986--1988}{B.S.}{Lewis University}{Romeoville, IL}{Computer Science}{}
+\cventry{1986--1988}{B.S.}{Lewis University}{Romeoville, IL}{Computer Science}{\vspace{3pt}}
 
 \cventry{1986--1988}{B.S.}{Lewis University}{Romeoville, IL}{Physics}{}
 
