--- a/service.tex
+++ b/service.tex
@@ -1,10 +1,14 @@
 \section{Service}
 
+\subsection{Department Chairperson Accomplishments}
+
+\cvlistitem{Launched New PhD Program, Fall 2023--Present}
+
 \subsection{University Service}
 
-\cvlistitem{\emph{Member}, Faculty Council, 2020-Present (Handbook Committee)}
+\cvlistitem{\emph{Member}, Faculty Council, 2020--Present (Handbook Committee)}
 
-\cvlistitem{\emph{Member}, Faculty Affairs Advisory Committee, 2019-Present}
+\cvlistitem{\emph{Member}, Faculty Affairs Advisory Committee, 2019--Present}
 
 \cvlistitem{\emph{Member}, Neuroscience Search Committee, 2020}
 
@@ -43,6 +47,8 @@
 \cvlistitem{\emph{Panelist}, National Insitutes for Health, Multiscale and Cross-Agency R01/U01 Programs}
 
 \subsection{Conference Committees}
+
+\cvlistitem{\emph{Vice Chair}, EduHPC 2023}
 
 \cvlistitem{\emph{Program Committee}, Robotics in Education 2021}
 
@@ -102,7 +108,9 @@
 
 \subsection{Editorial Boards/Profesional Society Service}
 
-\cvlistitem{\emph{Associate Editor}, Journal of Open Source Software, 2019--Present}
+\cvlistitem{\emph{Track Editor in Chief}, Data Science, Artificial Intelligence, and Machine Learning, Journal of Open Source Software, 2023--Present}
+
+\cvlistitem{\emph{Associate Editor}, Journal of Open Source Software, 2019--2023}
 
 \cvlistitem{\emph{Advisory Board}, IEEE Computer, 2020--Present}
 
