--- a/bibs/magazine/2023-article-evolution-lpcv.bib
+++ b/bibs/magazine/2023-article-evolution-lpcv.bib
@@ -10,7 +10,7 @@ pages = {28-37},
 abstract = {We organized the 2021 IEEE Low-Power Computer Vision Challenge to advance state-of-the-art solutions in low-power computer vision. Here, we examine the winning teams’ development patterns and design decisions, focusing on their techniques to balance power consumption and accuracy to provide guidelines for future competitions.},
 keywords = {computer vision;power demand;guidelines},
 doi = {10.1109/MC.2023.3250246},
-url = {https://ecommons.luc.edu/cs_facpubs/326/}
+url = {https://ecommons.luc.edu/cs_facpubs/326/},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
 month = {aug}
