update appointments for consistency

--- a/appointments.tex
+++ b/appointments.tex
@@ -2,9 +2,9 @@
 
 \vspace{6pt}
 
-\cventry{2022--Present}{Department Chairperson for Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
+\cventry{2022--Present}{Chairperson, Department of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
 
-\cventry{2011--Present}{Full Professor of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
+\cventry{2011--Present}{Full Professor, Department of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
 
 \cventry{2015--Present}{Visiting Computer Scientist, Argonne Leadership Computing Facility}{Argonne National Laboratory}{Argonne, IL}{}{\vspace{3pt}}
 
@@ -12,13 +12,13 @@
 
 \cventry{2012--2014,1999--2008}{Visiting Scholar, Electrical Engineering and Computer Science}{Northwestern University}{Evanston, IL}{}{\vspace{3pt}}
 
-\cventry{2014--2010}{Associate Professor of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
+\cventry{2014--2010}{Associate Professor, Department of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
 
-\cventry{2001--2004}{Visiting Associate Professor of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
+\cventry{2001--2004}{Visiting Associate Professor, Department of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
 
-\cventry{1999--2000}{Assistant Professor of Computer Science}{DePaul University}{Chicago, IL}{}{\vspace{3pt}}
+\cventry{1999--2000}{Assistant Professor, Department of Computer Science}{DePaul University}{Chicago, IL}{}{\vspace{3pt}}
 
-\cventry{1998--1999}{Visiting Assistant Professor of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
+\cventry{1998--1999}{Visiting Assistant Professor, Department ofComputer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
 
 \cventry{1996--1998}{Postdoctoral Computer Scientist}{Argonne National Laboratory}{Argonne, IL}{}{\vspace{3pt}}
 
