--- a/bibs/books/2000-book-christopher_thiruvathukal_hpjpc_2000.bib
+++ b/bibs/books/2000-book-christopher_thiruvathukal_hpjpc_2000.bib
@@ -3,7 +3,7 @@
  author = {Christopher, Thomas W. and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  isbn = {978-0-13-016164-2},
- publisher = {Prentice Hall PTR and Sun Microsystems Press},
+ publisher = {Prentice Hall PTR and Sun Microsystems Press Java Series},
  shorttitle = {High {Performance Java Computing}},
  title = {High Performance Java Computing: Multi-Threaded and Networked Programming},
  year = {2000},
