--- a/bibs/books/2024-book-lu-thiruvathukal-c-programming.bib
+++ b/bibs/books/2024-book-lu-thiruvathukal-c-programming.bib
@@ -1,4 +1,4 @@
-@book{crc-lpcv-2022,
+@book{crc-icp2-2024,
  abbr = {Books},
  abstract = {Revised for a new second edition, Intermediate C Programming provides a stepping-stone for intermediate-level students to go from writing short programs to writing real programs well. It shows students how to identify and eliminate bugs, write clean code, share code with others, and use standard Linux-based tools, such as ddd and valgrind.  This second edition provides expanded coverage of these topics with new material focused on software engineering, including version control and unit testing. The text enhances their programming skills by explaining programming concepts and comparing common mistakes with correct programs. It also discusses how to use debuggers and the strategies for debugging as well as studies the connection between programming and discrete mathematics.
 
