--- a/heading.tex
+++ b/heading.tex
@@ -52,6 +52,6 @@
 %\phone[mobile]{+1.773.829.4872}                   % optional, remove / comment the line if not wanted
 \phone[office]{+1.773.508.8931}                    % optional, remove / comment the line if not wanted
 %\phone[fax]{+3~(456)~789~012}                      % optional, remove / comment the line if not wanted
-\email{gkt@cs.luc.edu}                               % optional, remove / comment the line if not wanted
+\email{gthiruvathukal@luc.edu}                               % optional, remove / comment the line if not wanted
 \homepage{gkt.sh}
 
