add NSF EAGER grant 2024

--- a/funding.tex
+++ b/funding.tex
@@ -2,6 +2,8 @@
 
 \subsection{Research Awards/Grants}
 
+\cvline{NSF CBET-2343595}{PI, Collaborative Research: EAGER: CET: Exploring The Risks and Rewards of Large Language Models in Enabling Energy-Efficient Data Center Software Infrastructure, \$147,947, 2024-2026}
+
 \cvline{NSA NCAE-C H98230-22-1-0306}{co-PI, Taming Container Privileges using Userland OS Guests, \$500,000, 2022-2024}
 
 \cvline{NSF OAC-2107020}{PI, Collaborative Research: OAC Core: Advancing Low-Power Computer Vision at the Edge, \$258,000, 2021-2024}
