add recent projects with Abha Rai (Social Work)

--- a/funding.tex
+++ b/funding.tex
@@ -2,6 +2,9 @@
 
 \subsection{Research Awards/Grants}
 
+
+\cvline{Institute for Research on Poverty}{Co-PI, Culturally Responsive Intervention Incorporating Artificial Intelligence and Wearable Technology to Promote Healthy Integration Among New Afghans: Policy Implications (Under Review); \$50,000, 2025-2026}
+
 \cvline{NSF CBET-2343595}{PI, Collaborative Research: EAGER: CET: Exploring The Risks and Rewards of Large Language Models in Enabling Energy-Efficient Data Center Software Infrastructure, \$147,947, 2024-2026}
 
 \cvline{NSA NCAE-C H98230-22-1-0306}{co-PI, Taming Container Privileges using Userland OS Guests, \$500,000, 2022-2024}
@@ -39,6 +42,8 @@
 \cvline{DARPA SBIR Phase I}{Co-PI, Cluster Based Repositories and Analysis, \$100,000, 2003}
 
 \subsection{University Funding}
+
+\cvline{Schreiber Venture Fund}{Co-PI, Culturally Responsive Intervention Incorporating AI to Promote Healthy Integration Among Afghan Evacuees in Illinois and Tennessee (Pilot Study); \$47,763, 2024-2025}
 
 \cvline{Office of Research Services}{PI, Autonomous Vehicle Security, \$5,000, 2019-2020}
 
