--- a/05-industry.tex
+++ b/05-industry.tex
@@ -2,7 +2,7 @@
 
 \cventry{2002--2004}{President and CEO}{Nimkathana Corporation}{Chicago, IL}{}{\vspace{3pt}}
 
-\cventry{1995--1996}{Development Manager}{R.R. Donnelley and Sons}{Lisle, IL}{}{\vspace{3pt}}
+\cventry{1995--1996}{Development Manager}{R.R. Donnelley and Sons/Metromail}{Lombard, IL}{}{\vspace{3pt}}
 
 \cventry{1993--1995}{Senior Member of Technical Staff}{R.R. Donnelley and Sons Technical Center}{Lisle, IL}{}{\vspace{3pt}}
 
