--- a/20-funding.tex
+++ b/20-funding.tex
@@ -1,7 +1,10 @@
 \section{Funding}
 
-\subsection{Research Awards/Grants}
+\subsection{Award Search}
 
+See \href{https://www.nsf.gov/awardsearch/simpleSearchResult?queryText=Thiruvathukal&ActiveAwards=true}{NSF Award Search}.
+
+\subsection{Research Awards/Grants}
 
 \cvline{Institute for Research on Poverty}{Co-PI, Culturally Responsive Intervention Incorporating Artificial Intelligence and Wearable Technology to Promote Healthy Integration Among New Afghans: Policy Implications (Under Review); \$50,000, 2025-2026}
 
