--- a/gkthiruvathukal-cv.tex
+++ b/gkthiruvathukal-cv.tex
@@ -1,26 +1,26 @@
 % George K. Thiruvathukal's CV
 % Version 2018.1
 
-%\documentclass[10pt,usletter,sans,draft]{moderncv} 
-\documentclass[10pt,usletter,sans]{moderncv} 
+\documentclass[12pt,usletter,sans,draft]{moderncv} 
 
-% See if this will fix the font scaling problem
-%\usepackage[T1]{fontenc}
-%\usepackage{lmodern}
-
-\input{heading}
+\input{settings}
 
 \begin{document}
 
 \makecvtitle
 
-\input{appointments}
-\input{industry}
-\input{education}
-\input{recognition}
-\input{funding}
-\input{pubs}
-\input{media}
-\input{service}
+\input{00-appointments}
+\input{05-industry}
+\input{10-education}
+%\input{technical}
+%\input{personal}
+\input{15-recognition}
+\input{20-funding}
+\input{25-pubs}
+\input{28-students}
+\input{40-media}
+\input{35-service}
+%\input{teaching}
+%\input{rd}
 
 \end{document}
