--- a/00-appointments.tex
+++ b/00-appointments.tex
@@ -12,16 +12,14 @@
 
 \cventry{2012--2014,1999--2008}{Visiting Scholar, Electrical Engineering and Computer Science}{Northwestern University}{Evanston, IL}{}{\vspace{3pt}}
 
-\cventry{2014--2010}{Associate Professor, Department of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
+\cventry{2004--2010}{Associate Professor, Department of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
 
 \cventry{2001--2004}{Visiting Associate Professor, Department of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
 
 \cventry{1999--2000}{Assistant Professor, Department of Computer Science}{DePaul University}{Chicago, IL}{}{\vspace{3pt}}
 
-\cventry{1998--1999}{Visiting Assistant Professor, Department ofComputer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
+\cventry{1998--1999}{Visiting Assistant Professor, Department of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
 
-\cventry{1996--1998}{Postdoctoral Computer Scientist}{Argonne National Laboratory}{Argonne, IL}{}{\vspace{3pt}}
+\cventry{1996--1998}{Postdoctoral Computer Scientist, Mathematics and Computer Science Division}{Argonne National Laboratory}{Argonne, IL}{}{\vspace{3pt}}
 
-\cventry{1996--1997}{Lecturer of Computer Science}{Illinois Institute of Technology}{Chicago, IL}{}{\vspace{3pt}}
-
-
+\cventry{1996--1997}{Adjunct Assistant Professor of Computer Science}{Illinois Institute of Technology}{Chicago, IL}{}{\vspace{3pt}}
