--- a/35-service.tex
+++ b/35-service.tex
@@ -2,13 +2,19 @@
 
 \subsection{Department Chairperson Accomplishments}
 
-\cvlistitem{Launched New PhD Program, Fall 2023--Present}
+\cvlistitem{Launched PhD Program, Fall 2023--Present}
+
+\cvlistitem{Launched Center for Cybersecurity, College of Arts and Sciences, Fall 2025 [Pending]}
+
+\cvlistitem{Launched New MS Cybersecurity Program, Fall 2025 [Pending]}
+
+\cvlistitem{Launched New Minor in AI, Fall 2025 [Pending]}
+
+\cvlistitem{Launched New Minor in AI and Human Flourishing with Department of Philosophy, Fall 2025 [Pending]}
 
 \subsection{University Service}
 
-\cvlistitem{\emph{Member}, Faculty Council, 2020--Present (Handbook Committee)}
-
-\cvlistitem{\emph{Member}, Faculty Affairs Advisory Committee, 2019--Present}
+\cvlistitem{\emph{Member}, Faculty Council, Faculty Handbook Committee, 2020--2022}
 
 \cvlistitem{\emph{Member}, Neuroscience Search Committee, 2020}
 
