a few bug fixes

--- a/99-settings.tex
+++ b/99-settings.tex
@@ -2,7 +2,7 @@
 
 % modern themes
 \moderncvstyle{banking}                            % style options are 'casual' (default), 'classic', 'oldstyle' and 'banking'
-\moderncvcolor{red}                                % color options 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
+\moderncvcolor{maroon}                                % color options 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
 %\renewcommand{\familydefault}{\sfdefault}         % to set the default font; use '\sfdefault' for the default sans serif font, '\rmdefault' for the default roman one, or any tex font name
 \nopagenumbers{}                                  % uncomment to suppress automatic page numbering for CVs longer than one page
 
@@ -16,7 +16,7 @@
 %\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
 %\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
-\usepackage[maxbibnames=99,backend=biber,style=numeric,natbib=true,dashed=false]{biblatex}
+\usepackage[maxbibnames=99,backend=biber,style=numeric,natbib=true]{biblatex}
 
 %\usepackage[backend=biber,style=numeric]{biblatex} % or style=numeric-comp for compressed numbers
 
