add publication summary (metrics and GitHub stats)

--- a/data/25-pubs.tex
+++ b/data/25-pubs.tex
@@ -1,21 +1,11 @@
 \setlength\bibitemsep{1.5\itemsep}
 
+\section{Publication Summary}
 
-% Custom Highlight Author Field Format
+\input{99-scholarly-bibliometrics}
 
+\input{99-github-contributions}
 
-% Failed Experiment
-% \begin{refsection}[bibliography/gkt-books]
-%   \begingroup
-%     \DeclareFieldFormat{author}{%
-%       \ifdefsubstring{#1}{Thiruvathukal}%
-%         {\textbf{\textbf{#1}}}%
-%         {#1}%
-%     }
-%     \nocite{*}
-%     \printbibliography[sorting=ynt, title={Books Test}]
-%   \endgroup
-% \end{refsection}
 
 \begin{refsection}[bibliography/gkt-books]
 \nocite{*} 
