remove svgnames as well

--- a/settings.tex
+++ b/settings.tex
@@ -76,7 +76,7 @@
 \newcommand{\markedu}{\textbf{*}}
 
 \usepackage{xspace}
-\usepackage[svgnames]{xcolor}
+\usepackage{xcolor}
 \DeclareBibliographyCategory{education}
 % the colour definition
 \colorlet{eduentry}{Maroon}% let 'impentry' = Maroon
