remove edu entry Maroon for now

--- a/settings.tex
+++ b/settings.tex
@@ -79,7 +79,7 @@
 \usepackage{xcolor}
 \DeclareBibliographyCategory{education}
 % the colour definition
-\colorlet{eduentry}{Maroon}% let 'impentry' = Maroon
+%\colorlet{eduentry}{Maroon}% let 'impentry' = Maroon
 
 % Inform biblatex that all books in the 'important' category deserve
 % special treatment, while all others do not
