add high school diploma

--- a/data/14-education.tex
+++ b/data/14-education.tex
@@ -12,4 +12,6 @@ for Parallel and Distributed Processing}}{\vspace{3pt}}
 {\vspace{3pt}\underline{Undergraduate Research:} \textit{Apt Data Structures Library and LL-style Parser Generator for C Programming}, \textit{Data-Parallel C Compiler Front End} and \textit{Weak Interactions Physics Smart Acquisition System (WISAS)}}{\vspace{3pt}}
 
 
+\cventry{1983-1985}{High School Diploma}{Decatur High School}{Federal Way, WA}{}{}
+
 \cventry{2022-Present}{BM}{Loyola University Chicago}{Chicago, IL}{Music/Jazz Performance [in progress]}{\vspace{3pt}}
