--- a/data/14-education.tex
+++ b/data/14-education.tex
@@ -11,8 +11,4 @@ for Parallel and Distributed Processing}}{\vspace{3pt}}
 \cventry{1986-1988}{BS}{Lewis University}{Romeoville, IL}{Computer Science and Physics; Mathematics Minor}
 {\vspace{3pt}\underline{Undergraduate Research:} \textit{Apt Data Structures Library and LL-style Parser Generator for C Programming}, \textit{Data-Parallel C Compiler Front End} and \textit{Weak Interactions Physics Smart Acquisition System (WISAS)}}{\vspace{3pt}}
 
-\cventry{1983-1985}{High School Diploma, National Honor Society}{Decatur High School}{Federal Way, WA}{}
-{\vspace{3pt}\underline{Note:} Completed mathematics courses in calculus (three quarters), differential equations, and linear algebra and one year of computer science through discrete structures at Joliet Junior College (in Joliet, Illinois) and Highline Community College (in Des Moines, Washington) during junior and senior years of high school.}{\vspace{3pt}}
-
-
-\cventry{2022-Present}{BM}{Loyola University Chicago}{Chicago, IL}{Music/Jazz Performance [in progress]}{\vspace{3pt}}
+%\cventry{2022-Present}{BM}{Loyola University Chicago}{Chicago, IL}{Music/Jazz Performance [in progress]}{\vspace{3pt}}
