checkpoint intermediate progress on author highlighting using Konstantin's recent updates

--- a/data/25-pubs.tex
+++ b/data/25-pubs.tex
@@ -17,6 +17,11 @@
 \printbibliography[sorting=ynt, title=Conference Papers]   
 \end{refsection}
 
+\begin{refsection}[bibliography/gkt-incollection]
+\nocite{*} 
+\printbibliography[sorting=ynt, title=Book Chapters]   
+\end{refsection}
+
 \begin{refsection}[bibliography/gkt-journal]
 \nocite{*} 
 \printbibliography[sorting=ynt, title=Journal Articles]   
