intermediate commit: author annotations

--- a/data/25-pubs.tex
+++ b/data/25-pubs.tex
@@ -6,6 +6,7 @@
 
 \input{99-github-contributions}
 
+\cvline{Note}{Undergraduates appear as \textit{Name$^*$}; Graduate students appear as \textit{Name$^+$}; I appear as \textbf{George K. Thiruvathukal}}.
 
 \begin{refsection}[bibliography/gkt-books]
 \nocite{*} 
