update PhD/MS students

--- a/data/28-students.tex
+++ b/data/28-students.tex
@@ -1,21 +1,31 @@
-\section{Students}
+\section{Dissertation Supervision/Co-Supervision}
 
-\subsection{Doctoral Students}
+\subsection{Loyola University Chicago}
 
-\cvline{Nicholas Synovic}{2023--Present}
-
-\cvline{Eric Pautsch}{2023--Present}
-
-\cvline{Matt Hyatt}{2023--Present}
+\cvline{Matt Hyatt}{2024--Present}
 
 \cvline{Jason Luce}{2023--Present}
 
-\subsection{Masters Students}
+\cvline{Eric Pautsch}{2024--Present}
 
 \cvline{Nicholas Synovic}{2023--Present}
+
+\subsection{Other Universities and Institutions}
+
+\cvline{Dario Dematties, University of Buenos Aires}{2020-2023}
+
+\cvline{Nicholas Eliopoulous, Purdue University}{2020--Present}
+
+\cvline{Caleb Tung, Purdue University}{2020--2024}
+
+\cvline{Abhinav Goel, Purdue University}{2019--2023}
+
+\cvline{Purvish Jajal, Purdue University}{2024--Present}
+
+\cvline{Wenxin Jiang, Purdue University}{2019--Present}
+
+\subsection{Masters Students with Thesis}
 
 \cvline{Shilpika}{TBD}
 
-\subsection{Undergraduate Students}
-
-\cvline{Nicholas Synovic}{2023--Present}
+\cvline{Jack West}{TBD}
