some formatting updates

--- a/data/14-education.tex
+++ b/data/14-education.tex
@@ -2,13 +2,12 @@
 
 %\cventry{1996--1998}{Postdoctoral Computer Scientist}{Argonne National Laboratory}{Argonne, IL}{}{\vspace{3pt}}
 
-\cventry{1990-1995}{PhD}{Illinois Insititute of Technology}{Chicago, IL}{Computer Science}{\vspace{3pt}\underline{Doctoral Dissertation:} \textit{An Enhanced Actors Model and Programming Environment
-for Parallel and Distributed Processing}}{\vspace{3pt}}
+\cventry{1990-1995}{PhD}{Illinois Insititute of Technology}{Chicago, IL}{Computer Science}{\vspace{3pt}\underline{Doctoral Dissertation:} \textit{An Enhanced Actors Model and Programming Environment for Parallel and Distributed Processing}}{\vspace{3pt}}
 
 \cventry{1988-1990}{MS}{Illinois Institute of Technology}{Chicago, IL}{Computer Science}
-{\vspace{3pt}\underline{Masters Research:} \textit{A Simulation of Demand-Driven Dataflow: Translation from Lucid into MDC Language, a software dataflow system for distributed multicore systems}}{\vspace{3pt}}
+{\vspace{3pt}\underline{Masters Research:} \textit{A Simulation of Demand-Driven Dataflow: Translation from Lucid into Message Driven Computing (MDC) Language (a software dataflow system for distributed multicore systems)}}{\vspace{3pt}}
 
 \cventry{1986-1988}{BS}{Lewis University}{Romeoville, IL}{Computer Science and Physics; Mathematics Minor}
-{\vspace{3pt}\underline{Undergraduate Research:} \textit{Apt Data Structures Library and LL-style Parser Generator for C Programming}, \textit{Data-Parallel C Compiler Front End} and \textit{Weak Interactions Physics Smart Acquisition System (WISAS)}}{\vspace{3pt}}
+{\vspace{4pt}\underline{Undergraduate Research:} \textit{Apt Data Structures Library for the C Programming Language and LL(k)-style Parser Generator}, \textit{Data-Parallel C Compiler Code Generator}, \textit{Weak Interactions Physics Smart Acquisituon System (WISAS)}, and \textit{Coupled Oscillations in One Dimension}}{\vspace{3pt}}.
 
 %\cventry{2022-Present}{BM}{Loyola University Chicago}{Chicago, IL}{Music/Jazz Performance [in progress]}{\vspace{3pt}}
