--- a/data/25-pubs.tex
+++ b/data/25-pubs.tex
@@ -6,7 +6,7 @@
 
 \input{99-github-contributions}
 
-\cvline{Note}{Undergraduates appear as \textit{Name$^*$}; Graduate students appear as \textit{Name$^+$}; I appear as \textbf{George K. Thiruvathukal}}.
+\cvline{Note}{Undergraduates appear as \textit{Name$^*$}; Graduate students appear as \textit{Name$^+$}; I appear as \textcolor{brown}{\textbf{George K. Thiruvathukal}} (in \textbf{bold}+\textcolor{brown}{brown}).}
 
 \begin{refsection}[bibliography/gkt-books]
 \nocite{*} 
