add Preprints to Technical Reports section

--- a/data/25-pubs.tex
+++ b/data/25-pubs.tex
@@ -35,7 +35,7 @@
 
 \begin{refsection}[bibliography/gkt-techreport]
 \nocite{*} 
-\printbibliography[sorting=ynt, title=Technical Reports]   
+\printbibliography[sorting=ynt, title=Preprints and Technical Reports]   
 \end{refsection}
 
 \begin{refsection}[bibliography/gkt-misc]
