add students (still a few more to go)

--- a/data/28-students.tex
+++ b/data/28-students.tex
@@ -4,6 +4,12 @@
 
 \cvline{Matt Hyatt}{2024--Present}
 
+\begin{itemize}
+
+\item \href{https://scholar.google.com/citations?user=SXv-oqYAAAAJ&hl=en}{Matt Hyatt's Google Scholar}
+
+\end{itemize}
+
 \cvline{Jason Luce}{2023--Present}
 
 \cvline{Eric Pautsch}{2024--Present}
@@ -13,19 +19,48 @@
 \subsection{Other Universities and Institutions}
 
 \cvline{Dario Dematties, University of Buenos Aires}{2020-2023}
+\begin{itemize}
+	\item \href {https://scholar.google.com/citations?user=vpMd1bIAAAAJ&hl=en}{Dario Dematties -- Google Scholar}
+\end{itemize}
 
 \cvline{Nicholas Eliopoulous, Purdue University}{2020--Present}
+\begin{itemize}
+	\item \href{https://scholar.google.com/citations?user=GFNuJCQAAAAJ&hl=en}{Nicholas Eliopoulous -- Google Scholar}
+\end{itemize}
 
 \cvline{Caleb Tung, Purdue University}{2020--2024}
 
 \cvline{Abhinav Goel, Purdue University}{2019--2023}
 
+\begin{itemize}
+	\item \href{https://scholar.google.com/citations?user=LvJvM7kAAAAJ&hl=en}{Abhinav Goel -- Google Scholar}
+\end{itemize}
+
 \cvline{Purvish Jajal, Purdue University}{2024--Present}
 
+\begin{itemize}
+	\item \href{https://scholar.google.com/citations?user=G43a2fwAAAAJ&hl=en}{Purvish Jajal -- Google Scholar}
+
+\end{itemize}
+
+
 \cvline{Wenxin Jiang, Purdue University}{2019--Present}
+\begin{itemize}
+\item \href{https://scholar.google.com/citations?user=skZNwokAAAAJ&hl=en}{Wenxin Jiang -- Google Scholar}
+\end{itemize}
+
 
 \subsection{Masters Students with Thesis}
+
+\cvline{Sarah Kaylor}{TBD}
+\begin{itemize}
+	\item \href{https://scholar.google.com/citations?user=GkE3YPQAAAAJ&hl=en}{Sarah Kaylor -- Google Scholar}
+\end{itemize}
 
 \cvline{Shilpika}{TBD}
 
 \cvline{Jack West}{TBD}
+\begin{itemize}
+	\item \href{https://scholar.google.com/citations?user=SPvs1hsAAAAJ&hl=en}{Jack West -- Google Scholar}
+\end{itemize}
+
