update students section (more to come)

--- a/data/28-students.tex
+++ b/data/28-students.tex
@@ -2,65 +2,46 @@
 
 \subsection{Loyola University Chicago}
 
-\cvline{Matt Hyatt}{2024--Present}
+\cvline{Matt Hyatt, PhD Student (Supervisor), Loyola University Chicago}{2024--Present}
+\cvlistitem{\href{https://scholar.google.com/citations?user=SXv-oqYAAAAJ&hl=en}{Matt Hyatt -- Google Scholar}}
 
-\begin{itemize}
+\cvline{Jason Luce, PhD Student (Supervisor), Loyola University Chicago}{2023--Present}
+\cvlistitem{Google Scholar (Coming Soon)}
 
-\item \href{https://scholar.google.com/citations?user=SXv-oqYAAAAJ&hl=en}{Matt Hyatt's Google Scholar}
+\cvline{Eric Pautsch, PhD Student (Supervisor), Loyola University Chicago}{2024--Present}
+\cvlistitem{Google Scholar (Coming Soon)}
 
-\end{itemize}
-
-\cvline{Jason Luce}{2023--Present}
-
-\cvline{Eric Pautsch}{2024--Present}
-
-\cvline{Nicholas Synovic}{2023--Present}
+\cvline{Nicholas Synovic, PhD Student (Supervisor), Loyola University Chicago}{2023--Present}
+\cvlistitem{\href{https://scholar.google.com/citations?user=H3VvTOIAAAAJ&hl=en}{Nicholas Synovic -- Google Scholar}}
 
 \subsection{Other Universities and Institutions}
 
-\cvline{Dario Dematties, University of Buenos Aires}{2020-2023}
-\begin{itemize}
-	\item \href {https://scholar.google.com/citations?user=vpMd1bIAAAAJ&hl=en}{Dario Dematties -- Google Scholar}
-\end{itemize}
+\cvline{Dario Dematties, PhD (Co-supervisor and Mentor), University of Buenos Aires}{2020-2023}
+\cvlistitem{\href {https://scholar.google.com/citations?user=vpMd1bIAAAAJ&hl=en}{Dario Dematties -- Google Scholar}}
 
-\cvline{Nicholas Eliopoulous, Purdue University}{2020--Present}
-\begin{itemize}
-	\item \href{https://scholar.google.com/citations?user=GFNuJCQAAAAJ&hl=en}{Nicholas Eliopoulous -- Google Scholar}
-\end{itemize}
+\cvline{Nicholas Eliopoulous, PhD Student (Co-supervisor), Purdue University}{2020--Present}
+\cvlistitem{\href{https://scholar.google.com/citations?user=GFNuJCQAAAAJ&hl=en}{Nicholas Eliopoulous -- Google Scholar}}
 
-\cvline{Caleb Tung, Purdue University}{2020--2024}
+\cvline{Caleb Tung, PhD (Co-Supervisor), Purdue University}{2020--2024}
+\cvlistitem{\href{https://calebtung.com}{Caleb Tung -- Web Site}}
 
-\cvline{Abhinav Goel, Purdue University}{2019--2023}
+\cvline{Abhinav Goel (Co-Supervisor), Purdue University}{2019--2023}
+\cvlistitem{\href{https://scholar.google.com/citations?user=LvJvM7kAAAAJ&hl=en}{Abhinav Goel -- Google Scholar}}
 
-\begin{itemize}
-	\item \href{https://scholar.google.com/citations?user=LvJvM7kAAAAJ&hl=en}{Abhinav Goel -- Google Scholar}
-\end{itemize}
+\cvline{Wenxin Jiang (Mentor), Purdue University}{2019--Present}
+\cvlistitem{\href{https://scholar.google.com/citations?user=skZNwokAAAAJ&hl=en}{Wenxin Jiang -- Google Scholar}}
 
-\cvline{Purvish Jajal, Purdue University}{2024--Present}
-
-\begin{itemize}
-	\item \href{https://scholar.google.com/citations?user=G43a2fwAAAAJ&hl=en}{Purvish Jajal -- Google Scholar}
-
-\end{itemize}
-
-
-\cvline{Wenxin Jiang, Purdue University}{2019--Present}
-\begin{itemize}
-\item \href{https://scholar.google.com/citations?user=skZNwokAAAAJ&hl=en}{Wenxin Jiang -- Google Scholar}
-\end{itemize}
+\cvline{Purvish Jajal (Co-Supervisor), Purdue University}{2024--Present}
+\cvlistitem{\href{https://scholar.google.com/citations?user=G43a2fwAAAAJ&hl=en}{Purvish Jajal -- Google Scholar}}
 
 
 \subsection{Masters Students with Thesis}
 
-\cvline{Sarah Kaylor}{TBD}
-\begin{itemize}
-	\item \href{https://scholar.google.com/citations?user=GkE3YPQAAAAJ&hl=en}{Sarah Kaylor -- Google Scholar}
-\end{itemize}
+\cvline{Sarah Kaylor, MS (Supervisor)}{2008--2012}
+\cvlistitem{\href{https://scholar.google.com/citations?user=GkE3YPQAAAAJ&hl=en}{Sarah Kaylor -- Google Scholar}}
 
-\cvline{Shilpika}{TBD}
+\cvline{Shilpika, MS (Supervisor)}{TBD}
 
-\cvline{Jack West}{TBD}
-\begin{itemize}
-	\item \href{https://scholar.google.com/citations?user=SPvs1hsAAAAJ&hl=en}{Jack West -- Google Scholar}
-\end{itemize}
+\cvline{Jack West, MS (Co-Supervisor)}{2021--2024}
+\cvlistitem{\href{https://scholar.google.com/citations?user=SPvs1hsAAAAJ&hl=en}{Jack West -- Google Scholar}}
 
