--- a/data/12-industry.tex
+++ b/data/12-industry.tex
@@ -8,6 +8,8 @@
 
 \cventry{1991--1993}{Member of Technical Staff}{Tellabs, Inc.}{Lisle, IL}{}{\vspace{3pt}}
 
+\cventry{1990--1992}{Part-Time Consultant, Database Application Development}{Technology Advisors}{Park Ridge,IL}{}{\vspace{3pt}}
+
 \section{Student Research Experiences/Internships}
 
 \cventry{1989--1991}{Graduate Lab Fellow, Environmental and Information Systems Division}{Argonne National Laboratory}{Argonne, IL}{}{\vspace{3pt}}
