--- a/data/28-students.tex
+++ b/data/28-students.tex
@@ -1,4 +1,4 @@
-\section{Dissertation Supervision/Co-Supervision}
+\section{PhD Dissertation and MS Thesis Supervision and Co-Supervision}
 
 \subsection{Loyola University Chicago}
 
@@ -16,10 +16,10 @@
 
 \subsection{Other Universities and Institutions}
 
-\cvline{Dario Dematties, PhD (Co-supervisor and Mentor), University of Buenos Aires}{2020-2023}
+\cvline{Dario Dematties, PhD (Co-Supervisor and Mentor), University of Buenos Aires}{2020-2023}
 \cvlistitem{\href {https://scholar.google.com/citations?user=vpMd1bIAAAAJ&hl=en}{Dario Dematties -- Google Scholar}}
 
-\cvline{Nicholas Eliopoulous, PhD Student (Co-supervisor), Purdue University}{2020--Present}
+\cvline{Nicholas Eliopoulous, PhD Student (Co-Supervisor), Purdue University}{2020--Present}
 \cvlistitem{\href{https://scholar.google.com/citations?user=GFNuJCQAAAAJ&hl=en}{Nicholas Eliopoulous -- Google Scholar}}
 
 \cvline{Caleb Tung, PhD (Co-Supervisor), Purdue University}{2020--2024}
@@ -44,4 +44,8 @@
 
 \cvline{Jack West, MS (Co-Supervisor)}{2021--2024}
 \cvlistitem{\href{https://scholar.google.com/citations?user=SPvs1hsAAAAJ&hl=en}{Jack West -- Google Scholar}}
+
+%\subsection{Undergraduate Scholars}
+
+
 
