--- a/data/12-chair-service.tex
+++ b/data/12-chair-service.tex
@@ -1,8 +1,8 @@
 \section{Chairperson Service and Highlights}
 
-\cvlistitem{Led growth of faculty to 17 full-time members with two (2) pending hires in Spring 2025}
+\cvlistitem{Led growth of full-time faculty from 14 to 19 full-time members (13 tenure stream and 6 teaching stream) as of Spring 2025}
 
-\cvlistitem{Obtained administrative approval and launched new PhD Program in Fall 2023}
+\cvlistitem{Obtained administrative approval and launched new PhD Program in Fall 2023 with 12 funded students within 2.5 years (4 work with me)}
 
 \cvlistitem{Obtained administrative approval and launched College of Arts and Sciences Center for Cybersecurity in Fall 2024}
 
@@ -10,6 +10,6 @@
 
 \cvlistitem{Obtained administrative approval to launch Minor in Artificial Intelligence in Fall 2025}
 
-\cvlistitem{Awaiting approval for Interdisciplinary Minor in Artificial Intelligence and Human Flourishing with Department of Philosophy in Fall 2025}
+\cvlistitem{Collaborated with the Business School to obtain approval to launch Minor in Applied Artificial Intelligence in Business in Fall 2025}
 
-\cvlistitem{Awaiting approval for Interdisciplinary Minor in Music Technology in Fall 2026}
+\cvlistitem{Awaiting approval for Interdisciplinary Minor in Artificial Intelligence and Human Flourishing with Department of Philosophy in Fall 2026}
