remove pending funding item

--- a/data/20-funding.tex
+++ b/data/20-funding.tex
@@ -10,7 +10,7 @@ See \href{https://www.nsf.gov/awardsearch/simpleSearchResult?queryText=Thiruvath
 
 \cvline{NSF CCF-2515526}{Co-PI, Conference: NAIRR Pilot Expansion: FA2: Capacity and Community for Research-Emerging Institutions with Small-to-Medium Computing Programs to University of Wyoming, Loyola University Chicago, College of Charleston; \$298,882, 2025-2027}
 
-\cvline{Institute for Research on Poverty}{Co-PI, Culturally Responsive Intervention Incorporating Artificial Intelligence and Wearable Technology to Promote Healthy Integration Among New Afghans: Policy Implications (Under Review); \$50,000, 2025-2026}
+%\cvline{Institute for Research on Poverty}{Co-PI, Culturally Responsive Intervention Incorporating Artificial Intelligence and Wearable Technology to Promote Healthy Integration Among New Afghans: Policy Implications (Under Review); \$50,000, 2025-2026}
 
 \cvline{NSF CBET-2343595}{PI, Collaborative Research: EAGER: CET: Exploring The Risks and Rewards of Large Language Models in Enabling Energy-Efficient Data Center Software Infrastructure, \$147,947, 2024-2026}
 
