two recent funding updates

--- a/data/20-funding.tex
+++ b/data/20-funding.tex
@@ -6,6 +6,8 @@ See \href{https://www.nsf.gov/awardsearch/simpleSearchResult?queryText=Thiruvath
 
 \subsection{Research Awards/Grants}
 
+\cvline{NSF CCF-2515526}{PI, Collaborative Research: Planning: CROSS: Building a Community aROund Securing the Research Software Supply Chain, Loyola University Chicago; \$49996, 2025-2027}
+
 \cvline{NEH Scholarly Editions}{Co-PI, The Amy Lowell Letters Project, Scholarly Editions and Translations; \$299,699, 2026-2029}
 
 \cvline{NSF CCF-2515526}{Co-PI, Conference: NAIRR Pilot Expansion: FA2: Capacity and Community for Research-Emerging Institutions with Small-to-Medium Computing Programs to University of Wyoming, Loyola University Chicago, College of Charleston; \$298,882, 2025-2027}
